pkg/addons/assets/vpc-controller-metadata.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vpc-admission-webhook
  namespace: kube-system

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: vpc-admission-webhook-cfg
  namespace: kube-system

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpc-admission-webhook
  namespace: kube-system

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpc-resource-controller
  namespace: kube-system
